US006: bug in serial event creation fixed

--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -211,7 +211,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="36dp"
             android:ems="10"
-            android:focusable="true"
+            android:focusable="false"
+            android:focusableInTouchMode="true"
             android:visibility="gone" />
 
 
