--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -26,9 +26,10 @@
 
     <TextView
         android:id="@+id/settings_settings_textView_settings"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="55dp"
         android:layout_toStartOf="@+id/settings_settings_editText_username"
         android:text="@string/settings_text"
