--- a/app/src/main/res/layout/activity_qrscan.xml
+++ b/app/src/main/res/layout/activity_qrscan.xml
@@ -1,52 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    android:background="#a099cc00"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp">
 
-    <RelativeLayout
-        android:id="@+id/scanner_result_realtiveLayout_CalendarFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </RelativeLayout>
-
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/scanner_result_constraintLayout_main"
         android:layout_width="match_parent"
-        android:layout_height="351dp"
-        android:background="#ff00ff">
+        android:layout_height="368dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="-4dp">
 
         <TextView
             android:id="@+id/scanner_result_textView_headline"
             android:layout_width="match_parent"
-            android:layout_height="77dp"
-            android:background="@android:color/holo_orange_dark"
+            android:layout_height="87dp"
             android:text="headline" />
 
         <TextView
             android:id="@+id/scanner_result_textview_eventText"
             android:layout_width="match_parent"
-            android:layout_height="228dp"
+            android:layout_height="266dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="116dp"
-            android:background="@android:color/holo_blue_bright"
-            android:text="scanner result" />
-    </RelativeLayout>
+            android:text="scanner result"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="105dp" />
+    </android.support.constraint.ConstraintLayout>
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/scanner_result_constraintLayout_buttonFrame"
-        android:layout_width="368dp"
+        android:layout_width="348dp"
         android:layout_height="182dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="369dp">
 
         <Button
             android:id="@+id/scanner_result_button_addEvent"
@@ -54,9 +50,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="12dp"
             android:text="@string/termin_zusagen"
-            android:visibility="visible" />
+            android:visibility="visible"
+            tools:layout_editor_absoluteX="76dp"
+            tools:layout_editor_absoluteY="10dp" />
 
         <Button
             android:id="@+id/scanner_result_button_save_without_assent"
@@ -64,7 +61,9 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/scanner_result_button_reject_event"
             android:layout_centerHorizontal="true"
-            android:text="@string/termin_ohne_zusage_speichern" />
+            android:text="@string/termin_ohne_zusage_speichern"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="58dp" />
 
         <Button
             android:id="@+id/scanner_result_button_reject_event"
@@ -72,10 +71,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="72dp"
-            android:text="@string/termin_ablehnen" />
+            android:text="@string/termin_ablehnen"
+            tools:layout_editor_absoluteX="76dp"
+            tools:layout_editor_absoluteY="118dp" />
 
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
