--- a/app/src/main/res/layout/fragment_calendar_qrscan.xml
+++ b/app/src/main/res/layout/fragment_calendar_qrscan.xml
@@ -16,9 +16,10 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/scanner_result_relativeLayout_main"
+        android:id="@+id/scanner_result_constraintLayout_main"
         android:layout_width="match_parent"
-        android:layout_height="351dp">
+        android:layout_height="351dp"
+        android:background="@android:color/black">
 
         <TextView
             android:id="@+id/scanner_result_textView_headline"
@@ -33,11 +34,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="77dp"
+            android:background="@android:color/darker_gray"
             android:text="scanner result" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/scanner_result_relativeLayout_buttonFrame"
+        android:id="@+id/scanner_result_constraintLayout_buttonFrame"
         android:layout_width="368dp"
         android:layout_height="182dp"
         android:layout_alignParentBottom="true"
