--- a/app/src/main/res/layout/activity_qrgenerator.xml
+++ b/app/src/main/res/layout/activity_qrgenerator.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,37 +14,38 @@
 
     <RelativeLayout
         android:id="@+id/generator_texView_frame"
-        android:layout_width="match_parent"
+        android:layout_width="382dp"
         android:layout_height="347dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/generator_textView_Headline"
-            android:layout_width="244dp"
-            android:layout_height="46dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="23dp"
-            android:text="@string/headline" />
+            android:layout_width="371dp"
+            android:layout_height="74dp"
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/generator_textView_description"
-            android:layout_width="309dp"
-            android:layout_height="111dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="78dp"
+            android:layout_width="382dp"
+            android:layout_height="195dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="21dp"
             android:scrollbars="vertical"
-            android:text="EventText" />
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="152dp" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/generator_button_frame"
-        android:layout_width="match_parent"
+        android:layout_width="384dp"
         android:layout_height="217dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="359dp">
 
 
         <Button
@@ -52,9 +54,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="101dp"
-            android:layout_marginTop="22dp"
-            android:text="@string/qr_code_anzeigen" />
+            android:text="@string/savingSuccessful_qrcode"
+            tools:layout_editor_absoluteX="40dp"
+            tools:layout_editor_absoluteY="49dp" />
 
         <Button
             android:id="@+id/generator_button_show_eventFeedbackFragment"
@@ -62,8 +64,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="71dp"
-            android:text="@string/r_ckmeldungen_anzeigen" />
+            android:text="@string/r_ckmeldungen_anzeigen"
+            tools:layout_editor_absoluteX="85dp"
+            tools:layout_editor_absoluteY="137dp" />
 
     </RelativeLayout>
 </RelativeLayout>
