--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="#f1f1f2"
+        android:centerColor="#e7e7e8"
+        android:endColor="#cfcfcf"
+        android:angle="270" />
+</shape>
