--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -77,6 +77,13 @@
             android:layout_marginEnd="-220dp"
             android:layout_toStartOf="@+id/dialog_qrScanner_button_eventRecject"
             android:text="ABBRUCH" />
+
+        <Button
+            android:id="@+id/dialog_qrScanner_button_toCalender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Zum Kalender" />
     </RelativeLayout>
 
 
