--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -47,7 +47,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="191dp"
             android:layout_marginEnd="95dp"
-            android:text="@string/termin_ablehnen"
+            android:text="@string/eventReject"
             android:visibility="visible" />
 
         <Button
@@ -57,7 +57,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/dialog_qrScanner_button_eventRecject"
             android:layout_marginTop="168dp"
-            android:text="@string/termin_zusagen"
+            android:text="@string/eventSave"
             android:visibility="visible" />
 
         <Button
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:text="Termin @string/termin_ohne_zusage_speichern" />
+            android:text="@string/eventSaveWithoutAssign" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_cancle"
