--- a/app/src/main/res/layout/activity_qrsharing.xml
+++ b/app/src/main/res/layout/activity_qrsharing.xml
@@ -19,22 +19,19 @@
 
         <TextView
             android:id="@+id/qrSharing_textView_headline"
-            android:layout_width="260dp"
+            android:layout_width="361dp"
             android:layout_height="55dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp"
-            android:text="qrSharing_Headline" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true" />
 
         <TextView
             android:id="@+id/qrSharing_textView_description"
-            android:layout_width="281dp"
-            android:layout_height="103dp"
+            android:layout_width="372dp"
+            android:layout_height="161dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="13dp"
-            android:layout_marginStart="55dp"
-            android:text="qrSharing_description" />
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="58dp" />
 
 
     </RelativeLayout>
@@ -44,7 +41,9 @@
         android:layout_width="match_parent"
         android:layout_height="147dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="420dp">
 
         <Button
             android:id="@+id/qrSharing_button_shareWith"
@@ -52,18 +51,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="26dp"
-            android:text="@string/share_with" />
+            android:text="@string/share_with"
+            tools:layout_editor_absoluteX="129dp"
+            tools:layout_editor_absoluteY="16dp" />
 
         <Button
             android:id="@+id/qrSharing_button_showInCalendar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="14dp"
-            android:layout_marginEnd="89dp"
-            android:text="In Kalender anzeigen" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="37dp"
+            android:text="@string/in_kalender_anzeigen"
+            tools:layout_editor_absoluteX="101dp"
+            tools:layout_editor_absoluteY="83dp" />
 
     </RelativeLayout>
 
@@ -72,6 +73,8 @@
         android:layout_width="218dp"
         android:layout_height="200dp"
         android:layout_above="@+id/qrSharing_relativeLayout_buttonFrame"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        tools:layout_editor_absoluteX="83dp"
+        tools:layout_editor_absoluteY="220dp" />
 
 </RelativeLayout>
