--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settings_relativeLayout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -87,5 +86,16 @@
         android:layout_alignStart="@+id/settings_settings_textView_settings"
         android:layout_marginTop="234dp"
         android:text="@string/reminder_text" />
+
+    <RelativeLayout
+        android:id="@+id/setting_settings_relativeLayout_buttonFrame"
+        android:layout_width="368dp"
+        android:layout_height="182dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
