US038: Changed all Fragments and implemented Back Button

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,7 +9,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/frameLayout">
+        android:id="@+id/calendar_frameLayout">
     </FrameLayout>
-
 </android.support.constraint.ConstraintLayout>
