--- a/app/src/main/res/layout/fragment_qrsharing.xml
+++ b/app/src/main/res/layout/fragment_qrsharing.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.QRSharingActivity"
+    tools:context=".view.QRSharingFragment"
     android:background="?android:windowBackground">
 
     <RelativeLayout
@@ -16,7 +16,9 @@
     <RelativeLayout
         android:id="@+id/qrSharing_relativeLayout_textViewFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/qrSharing_textView_headline"
@@ -28,9 +30,10 @@
         <TextView
             android:id="@+id/qrSharing_textView_description"
             android:layout_width="372dp"
-            android:layout_height="161dp"
-            android:layout_alignParentBottom="true"
+            android:layout_height="59dp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="54dp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="58dp" />
 
@@ -73,8 +76,9 @@
         android:id="@+id/qrSharing_imageView_qrCode"
         android:layout_width="218dp"
         android:layout_height="200dp"
-        android:layout_above="@+id/qrSharing_relativeLayout_buttonFrame"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="136dp"
         tools:layout_editor_absoluteX="83dp"
         tools:layout_editor_absoluteY="220dp" />
 
