--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/settings_relativeLayout_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -87,5 +86,23 @@
         android:layout_alignStart="@+id/settings_settings_textView_settings"
         android:layout_marginTop="234dp"
         android:text="@string/reminder_text" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/settings_settings_textView_username"
+        android:layout_marginBottom="256dp"
+        android:text="@string/startTab" />
+
+    <Spinner
+        android:id="@+id/settings_settings_spinner_startTab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView"
+        android:layout_marginStart="-14dp"
+        android:layout_toEndOf="@+id/settings_settings_textView_settings"
+        android:entries="@array/start_tab" />
 
 </RelativeLayout>
