US049: merged with master

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,6 +9,5 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/calendar_frameLayout">
-    </FrameLayout>
+        android:id="@+id/calendar_frameLayout"></FrameLayout>
 </android.support.constraint.ConstraintLayout>
