--- a/app/src/main/res/layout/fragment_qrsharing.xml
+++ b/app/src/main/res/layout/fragment_qrsharing.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.QRSharingFragment"
-    android:background="?android:windowBackground">
+    android:background="?android:windowBackground"
+    tools:context=".view.QRSharingFragment">
 
     <RelativeLayout
         android:id="@+id/qrSharing_relativeLayout_calendarActivity"
