--- a/app/src/main/res/layout/fragment_event_overview.xml
+++ b/app/src/main/res/layout/fragment_event_overview.xml
@@ -19,32 +19,45 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/eventOverview_floatingActionButtonMenu"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
             android:layout_marginBottom="28dp"
             android:layout_marginEnd="312dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:tint="@color/zentea_white"
+            app:backgroundTint="@color/zentea_darkgreen"
+            app:elevation="6dp"
+            app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.997"
-            app:srcCompat="@drawable/ic_android_black2_24dp" />
+            app:srcCompat="@drawable/ic_plusmenu" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/eventOverview_floatingActionButtonNewEvent"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="392dp"
+            android:layout_gravity="top|right"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:visibility="invisible"
+            app:backgroundTint="@color/zentea_darkgreen"
+            app:elevation="6dp"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@+id/eventOverview_floatingActionButtonMenu"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@android:drawable/ic_menu_today" />
 
         <android.support.design.widget.FloatingActionButton
@@ -52,11 +65,20 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="bottom|end"
-            android:layout_marginEnd="64dp"
-            android:layout_marginTop="412dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="22dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:visibility="invisible"
+            app:backgroundTint="@color/zentea_darkgreen"
+            app:elevation="6dp"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toTopOf="@+id/eventOverview_floatingActionButtonNewEvent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.979"
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
         <TextView
