--- a/app/src/main/res/layout/fragment_settings_copyright.xml
+++ b/app/src/main/res/layout/fragment_settings_copyright.xml
@@ -7,8 +7,21 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/settings_copyright_textView_headline"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="104dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/settings_headline_privacyPolicy" />
+
+    <TextView
+        android:id="@+id/settings_copyright_textView_privacyPolicy"
+        android:layout_width="match_parent"
+        android:layout_height="399dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="64dp"
+        android:scrollbars="vertical"
         android:text="Copyright" />
 
 </RelativeLayout>
