--- a/app/src/main/res/layout/fragment_settings_copyright.xml
+++ b/app/src/main/res/layout/fragment_settings_copyright.xml
@@ -6,22 +6,11 @@
     android:background="?android:windowBackground"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/settings_copyright_textView_headline"
+    <WebView
+        android:id="@+id/settings_copyright_webView_privacyPolicy"
         android:layout_width="match_parent"
-        android:layout_height="104dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/settings_headline_privacyPolicy" />
-
-    <TextView
-        android:id="@+id/settings_copyright_textView_privacyPolicy"
-        android:layout_width="match_parent"
-        android:layout_height="399dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="64dp"
-        android:scrollbars="vertical"
-        android:text="Copyright" />
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
