--- a/app/src/main/res/layout/fragment_settings_feedback.xml
+++ b/app/src/main/res/layout/fragment_settings_feedback.xml
@@ -6,9 +6,9 @@
     android:background="?android:windowBackground"
     android:orientation="vertical">
 
-    <TextView
+    <WebView
+        android:id="@+id/settings_feedback_webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Feedback" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
