--- a/app/src/main/res/anim/actionbuttonclose.xml
+++ b/app/src/main/res/anim/actionbuttonclose.xml
@@ -5,16 +5,14 @@
         android:duration="300"
         android:fromXScale="0.8dp"
         android:fromYScale="0.8dp"
-        android:toXScale="0.0dp"
-        android:toYScale="0.0dp"
         android:interpolator="@android:anim/linear_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
-        />
+        android:toXScale="0.0dp"
+        android:toYScale="0.0dp" />
     <alpha
         android:duration="300"
         android:fromAlpha="1.0"
-        android:toAlpha="0.0"
         android:interpolator="@android:anim/accelerate_interpolator"
-        />
+        android:toAlpha="0.0" />
 </set>
