--- a/app/src/main/res/anim/actionbuttonrotateleft.xml
+++ b/app/src/main/res/anim/actionbuttonrotateleft.xml
@@ -4,9 +4,8 @@
     <rotate
         android:duration="300"
         android:fromDegrees="45"
-        android:toDegrees="0"
         android:interpolator="@android:anim/linear_interpolator"
-        android:pivotY="50%"
         android:pivotX="50%"
-        />
+        android:pivotY="50%"
+        android:toDegrees="0" />
 </set>
